added seed files

--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -13,4 +13,6 @@
       </form>
     </div>
 
-<script src="/javascript/signup.js"></script>
+{{!-- <script src="/javascript/signup.js"></script> --}}
+
+<script src="/public/js/signup.js"></script>
