--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -13,6 +13,5 @@
       </form>
     </div>
 
-{{!-- <script src="/javascript/signup.js"></script> --}}
 
-<script src="/public/js/signup.js"></script>
+<script src="/js/signup.js"></script>
